# duplicate-image-finder

./: .gitignore  Algorithm.cpp  Algorithm.h  CMakeLists.txt  DuplicateVector.cpp  DuplicateVector.h  Image.cpp  Image.h  ImageIndexer.cpp  ImageIndexer.h  README.md  Window.cpp  Window.h  comparison_algorithm.cpp  comparison_algorithm.h  image_loader.cpp  image_loader.h  indexer.cpp  indexer.h  main.cpp
GUI/: DeleteButton.cpp  DeleteButton.h  ImageInfo.cpp  ImageInfo.h  ImagePreview.cpp  ImagePreview.h  InfoBox.cpp  InfoBox.h  MainWindow.cpp  MainWindow.h  Miniature.cpp  Miniature.h  MiniatureBox.cpp  MiniatureBox.h  MiniatureImage.cpp  MiniatureImage.h  MiniaturePreview.cpp  MiniaturePreview.h  NavigationBox.cpp  NavigationBox.h  PreviewBox.cpp  PreviewBox.h  PreviewImage.cpp  PreviewImage.h  Window.cpp  Window.h
